--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
 </head>
 <body background="abstract-music-background-for-your-design-vector-3061906.jpg">
 <center>
-  	<h3 class="btn btn-warning heading">AI DJ WEB APP
-	    <br>
-	    <span class="note">NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
-        Move your right-hand wrist up and down for increasing and decreasing the speed</span>
-  	</h3>
-      <h3 class="btn btn-danger">Song name</h3>
-      <button onclick="play()" class="btn btn-info playbutton" >Play</button>
+  	
+      <h3 class="btn btn-danger heading">Song name</h3>
       <div class="disk">
         <img src="1438644_f3672.gif" class="disko">
         <br>
