--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 </head>
 <body background="abstract-music-background-for-your-design-vector-3061906.jpg">
 <center>
-  	
-      <h3 class="btn btn-danger heading">Song name</h3>
+  <h3 class="btn btn-warning heading">Music Web app
+    <br>
+    <span class="note">NOTE - Get your left hand wrist in front of webcam and to play the song . Get your right hand wrist to play the another song.
+      Keep atleast two feet distance from the webcam ,so that your wrist are detected quickly.
+    </span>
+  </h3>
+      <h3 class="btn btn-danger songname">Song name</h3>
       <div class="disk">
         <img src="1438644_f3672.gif" class="disko">
         <br>
